# mc-scanner

./: .dockerignore  .env.example  Dockerfile  docker-compose.yml  main.py  pyproject.toml
config/: settings.py
db/: engine.py  schema.sql
db/repositories/: lead_repo.py  scan_repo.py  server_repo.py
scanner/: ping.py  pipeline.py  scheduler.py
scoring/: engine.py  signals.py
scraper/: base.py  cornbread_api.py  geo_filter.py  minecraft_mp.py  orchestrator.py
web/: app.py
web/routes/: api.py  dashboard.py  leads.py  servers.py
web/static/css/: style.css
web/static/js/: charts.js
web/templates/: base.html  dashboard.html  leads.html  server_detail.html  server_list.html
