[project]
name = "mc-scanner"
version = "0.1.0"
description = "Minecraft Server Health Scanner & Lead Generator"
requires-python = ">=3.11"
dependencies = [
    "mcstatus>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.20.0",
    "apscheduler>=3.10.0,<4.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
